# gb-studio-discord-bot

./: .pre-commit-config.yaml  Cargo.toml  Containerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: main.rs
src/commands/: contribute.rs  docs.rs  mod.rs  ping.rs  roles.rs
src/components/: mod.rs
src/components/buttons/: mod.rs  role_buttons.rs
src/content/: docs.rs  mod.rs  roles.rs
