[package]
name = "gb-studio-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
phf = { version = "0.11", features = ["macros"] }
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
sublime_fuzzy = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
