[package]
name = "gb-studio-discord-bot"
version = "0.1.0"
authors = ["Arthur <105604432+f904a227@users.noreply.github.com>"]
edition = "2021"
description = "A bot for the GB Studio Discord server"
repository = "https://github.com/f904a227/gb-studio-discord-bot/"
license = "MIT OR Apache-2.0"
keywords = ["discord", "bot", "gb-studio"]
publish = false

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
phf = { version = "0.11", features = ["macros"] }
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model"
] }
sublime_fuzzy = "0.7"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
